--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "pug-loader": "^2.3.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
